# deposit-mlops

./: .env.example  .gitignore  README.md  config.py  del_clearml_project.py  pyproject.toml  register_templates.py  requirements-controller.txt  requirements-forecast.txt  requirements-tasks.txt  requirements.txt
business/: __init__.py  alerting.py  compare_model.py  data_processing.py  drift.py  evaluate.py  features.py  forecasting.py  hpo.py  inference.py  monitoring.py  train.py  validate.py
dashboards/: create_dashboard.py
docs/: 01_architecture.md  02_infrastructure.md  03_training_pipeline.md  04_production_pipeline.md  05_monitoring_drift.md  06_delete_project.md  07_serving_deployment.md  agent_setup.md  architecture.md  champion_registry.md  ci_cd.md  cleanup.md  explainability.md  monitoring_and_drift.md  production_pipeline.md  roadmap.md  training_pipeline.md
examples/: serving_payload.json
helpers/: __init__.py  clearml_utils.py
pipelines/: __init__.py  production_pipeline.py  specs.py  training_pipeline.py  trainning_pipeline.py
serving/: __init__.py  clearml_preprocess.py
src/: features.py
tasks/: __init__.py  alerting_model.py  auto_retraining.py  compare_champion.py  deploy_candidate_serving.py  deploy_serving.py  drift_detection.py  evaluate_model.py  explain_model.py  extract_data.py  feature_engineering.py  hpo_model.py  inference_model.py  monitoring_model.py  promote_champion.py  register_model.py  train_model.py  validate_data.py  verify_candidate_endpoint.py  verify_endpoint.py
tests/: test_data_processing.py  test_forecasting.py  (+6 more)
(+5 files in other folders)
