[project]
name = "cashflow-clearml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.11.0+cpu",
    "clearml>=2.1.8",
    "clearml-agent>=3.0.3",
    "fastparquet>=2026.5.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "neuralforecast>=3.1.8",
    "numpy>=2.2.6",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.50",
    "psycopg2-binary>=2.9.10",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
pytorch-lightning = { index = "pytorch-cpu" }
